--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@remix-run/react": "^1.8.2",
     "@remix-run/serve": "^1.8.2",
     "isbot": "^3.6.5",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.8.2",
