--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "npm-run-all -p build:*",
+    "build:css": "tailwindcss -i ./app/styles/index.server.css -o ./app/styles/index.css",
+    "build:remix": "remix build",
+    "dev": "npm-run-all -p dev:*",
+    "dev:css": "tailwindcss -i ./app/styles/index.server.css -o ./app/styles/index.css -w -p",
+    "dev:remix": "remix dev",
     "start": "remix-serve build",
     "typecheck": "tsc -b"
   },
