--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "npm-run-all -p build:*",
+    "build:css": "tailwindcss -i ./app/styles/index.server.css -o ./app/styles/index.css",
+    "build:remix": "remix build",
+    "dev": "npm-run-all -p dev:*",
+    "dev:css": "tailwindcss -i ./app/styles/index.server.css -o ./app/styles/index.css -w -p",
+    "dev:remix": "remix dev",
     "start": "remix-serve build",
     "typecheck": "tsc -b"
   },
@@ -12,8 +16,10 @@
     "@remix-run/react": "^1.8.2",
     "@remix-run/serve": "^1.8.2",
     "isbot": "^3.6.5",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.8.2",
