--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ssh2": "^1.11.0",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
