--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/node": "^1.8.2",
     "@remix-run/react": "^1.8.2",
     "@remix-run/serve": "^1.8.2",
+    "cpu-features": "^0.0.4",
     "isbot": "^3.6.5",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
